src/main/default/objects/OrderSetting__mdt/OrderSetting__mdt.object-meta.xml
<CustomObject>
    <label>Order Setting</label>
    <pluralLabel>Order Settings</pluralLabel>
</CustomObject>