src/main/default/objects/OrderSetting__mdt/fields/CompletedOrderStatuses__c.field-meta.xml
<CustomField>
    <fullName>CompletedOrderStatuses__c</fullName>
    <label>Completed Order Statuses</label>
    <length>255</length>
    <type>Text</type>
</CustomField>