src/main/default/objects/OrderSetting__mdt/fields/CurrentStatusRemoveFromRoute__c.field-meta.xml
<CustomField>
    <fullName>CurrentStatusRemoveFromRoute__c</fullName>
    <inlineHelpText>Please add statuses delimited by comma. Only statuses that order is changed from after planned on Route should be included.</inlineHelpText>
    <label>Current Status Remove From Route</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>