src/main/default/objects/OrderSetting__mdt/fields/InvoiceDueDateDaysAfterIssuedDate__c.field-meta.xml
<CustomField>
    <fullName>InvoiceDueDateDaysAfterIssuedDate__c</fullName>
    <label>Invoice Due Date(days after issued date)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>