src/main/default/objects/OrderSetting__mdt/fields/RtsStockUpdate__c.field-meta.xml
<CustomField>
    <fullName>RtsStockUpdate__c</fullName>
    <inlineHelpText>Please select Record Types by Developer Name (Seperated by comma) that will be included in determining unfufilled orders for stock inventory count.</inlineHelpText>
    <label>Rts Stock Update</label>
    <length>255</length>
    <type>Text</type>
</CustomField>