src/main/default/objects/OrderSetting__mdt/fields/RTsToCreateInvoice__c.field-meta.xml
<CustomField>
    <fullName>RTsToCreateInvoice__c</fullName>
    <label>RTs to Create Invoice</label>
    <length>255</length>
    <type>Text</type>
</CustomField>