src/main/default/objects/OrderSetting__mdt/fields/RTsToUpdateAccOnOrderCompletion__c.field-meta.xml
<CustomField>
    <fullName>RTsToUpdateAccOnOrderCompletion__c</fullName>
    <label>RTs to Update Acc on Order Completion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>