src/main/default/objects/OrderSetting__mdt/fields/StatusToCreateInvoice__c.field-meta.xml
<CustomField>
    <fullName>StatusToCreateInvoice__c</fullName>
    <label>Status to Create Invoice</label>
    <length>255</length>
    <type>Text</type>
</CustomField>