src/main/default/objects/OrderSetting__mdt/fields/TargetStatusRemoveFromRoute__c.field-meta.xml
<CustomField>
    <fullName>TargetStatusRemoveFromRoute__c</fullName>
    <inlineHelpText>Please add statuses delimited by comma. Only statuses that order is changed to after planned on Route should be included.</inlineHelpText>
    <label>Target Status Remove From Route</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>