src/main/default/objects/OrderSetting__mdt/fields/UnfulfilledOrders__c.field-meta.xml
<CustomField>
    <fullName>UnfulfilledOrders__c</fullName>
    <inlineHelpText>Please select Order status (seperated by a comma) that will be included in determining unfufilled orders for stock inventory count.</inlineHelpText>
    <label>Unfulfilled Orders</label>
    <length>255</length>
    <type>Text</type>
</CustomField>